@@ -323,7 +323,6 @@ static const struct fuse_opt option_list[] = {
 /* Default flags we send to FUSE */
 static const char *const s3backer_fuse_defaults[] = {
     "-okernel_cache",
-    "-ofsname=s3backer",
     "-ouse_ino",
     "-oentry_timeout=31536000",
     "-onegative_timeout=31536000",
@@ -390,6 +389,7 @@ struct s3backer_store *test_io_store;
 struct s3b_config *
 s3backer_get_config(int argc, char **argv)
 {
+    char buf[1024];
     int i;
 
     /* Remember user creds */
@@ -415,6 +415,12 @@ s3backer_get_config(int argc, char **argv)
     /* Parse command line flags */
     if (fuse_opt_parse(&config.fuse_args, &config, option_list, handle_unknown_option) != 0)
         return NULL;
+
+    /* Set fsname based on configuration */
+    snprintf(buf, sizeof(buf), "-ofsname=%s%s/%s",
+      config.test ? "" : config.http_io.baseURL, config.http_io.bucket, config.http_io.prefix);
+    if (fuse_opt_insert_arg(&config.fuse_args, 1, buf) != 0)
+        err(1, "fuse_opt_insert_arg");
 
     /* Validate configuration */
     if (validate_config() != 0)
